# QWoWSpellWork

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  qtlogging.ini  qtlogging.ini.const
CMake/: FindMySQL.cmake  options.cmake
docs/: Custom json format symbols.md  json_format_symbols.md
json/: CombatRating.json  CreatureTypes.json  ItemClass.json  ItemInventoryTypes.json  ItemSubclass.json  PowerTypes.json  ShapeShiftForms.json  SpellAttributes.json  SpellAuraStates.json  SpellAuraTypes.json  SpellCategory.json  SpellDamageType.json  SpellDispelTypes.json  SpellEffects.json  SpellFamily.json  SpellInterrupt.json  SpellMechanics.json  SpellMod.json  SpellPreventionTypes.json  SpellProc.json  SpellSchool.json  SpellSchools.json  SpellTargets.json  SummonProperties.json  UnitMods.json  appSettings.json  appSettings.json.const
src/: QSpellWork_en_GB.ts  SpellInfoTabEvents.cpp  appSettings.cpp  appSettings.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  mainwindow.ui
src/DBC/: DBCFileLoader.cpp  DBCFileLoader.h  DBCFileLoader.hpp  DBCStores.cpp  DBCStores.h  DBCStores.hpp  DBCStructures.cpp  DBCStructures.h  DBCStructures.hpp  SpellInfoHelper.cpp
src/DataStores/: DB2FileLoader.cpp  DB2FileLoader.hpp  DB2Structures.cpp  DB2Structures.hpp  DBCFileLoader.cpp  DBCFileLoader.hpp  DBCStores.cpp  DBCStructures.cpp  DBCStructures.hpp  DataStorage.cpp  DataStorage.hpp  DataStoresDefines.hpp
src/DataStores/Loaders/: DB2FileLoader.cpp  DB2FileLoader.hpp  DBCFileLoader.cpp  DBCFileLoader.hpp  DataStoresDefines.hpp
src/DataStores/Structures/: DB2Structures.cpp  DB2Structures.hpp  DBCStructures.cpp  DBCStructures.hpp
src/Enums/: CreatureDefines.hpp  ItemDefines.hpp  SpellEnumStr.h  SpellEnumStr.hpp  SpellEnums.h  SpellEnums.hpp  UnitDefines.hpp
src/Forms/: MainWindowForm.cpp  MainWindowForm.hpp  SearchFilterForm.cpp  SearchFilterForm.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  searchFilter.cpp  searchFilter.hpp  searchFilter.ui
src/Globals/: SearchFilters.cpp  SearchFilters.hpp  SearchFiltersStore.cpp  SearchFiltersStore.hpp  SharedDefines.hpp  SpellSearchFilter.cpp  SpellSearchFilter.hpp  ValueComparition.cpp  ValueComparition.hpp  appSettings.cpp  appSettings.hpp
src/JsonData/: JsonData.cpp  JsonData.hpp
src/SQL/: sqlConnection.cpp  sqlConnection.hpp
src/Spell/: SpellInfo.cpp  SpellInfoTabEvents.cpp
src/Translations/: QSpellWork_en_GB.ts
themes/: materialDark1.css  materialDark2.css  materialDark3.css  materialDark4.css  materialDark5.css  materialDark6.css  materialDarkDefault.css
